--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="title">Редактирование графика 1</div>
         <div class="column">
             <a href="images/tobe/редактирование виджета/_1.png">
-                 <img class="image-left" src="images/tobe/редактирование виджета/_1.png" alt="">
+                 <img class="image-left" src="images/tobe/edit/_1.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -84,7 +84,7 @@
         <div class="title">Редактирование графика 2</div>
         <div class="column">
             <a href="images/tobe/редактирование виджета/_2.png">
-                 <img class="image-left" src="images/tobe/редактирование виджета/_2.png" alt="">
+                 <img class="image-left" src="images/tobe/edit/_2.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -96,7 +96,7 @@
         <div class="title">Редактирование графика 2_2</div>
         <div class="column">
             <a href="images/tobe/редактирование виджета/2_2.png">
-                 <img class="image-left" src="images/tobe/редактирование виджета/2_2.png" alt="">
+                 <img class="image-left" src="images/tobe/edit/2_2.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -108,7 +108,7 @@
         <div class="title">Редактирование графика 3_1</div>
         <div class="column">
             <a href="images/tobe/редактирование виджета/3_1.png">
-                 <img class="image-left" src="images/tobe/редактирование виджета/3_1.png" alt="">
+                 <img class="image-left" src="images/tobe/edit/3_1.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -120,7 +120,7 @@
         <div class="title">Редактирование графика 4</div>
         <div class="column">
             <a href="images/tobe/редактирование виджета/4.png">
-                 <img class="image-left" src="images/tobe/редактирование виджета/4.png" alt="">
+                 <img class="image-left" src="images/tobe/edit/4.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -132,7 +132,7 @@
         <div class="title">Редактирование графика 5 - todo</div>
         <div class="column">
             <a href="images/tobe/редактирование виджета/5.png">
-                 <img class="image-left" src="images/tobe/редактирование виджета/5.png" alt="">
+                 <img class="image-left" src="images/tobe/edit/5.png" alt="">
             </a>
         </div>
         <div class="empty-column">Не реализовано</div>
@@ -152,7 +152,7 @@
         <div class="title">Отсутствие 2</div>
         <div class="column">
             <a href="images/tobe/редактирование отсутствия/2.png">
-                 <img class="image-left" src="images/tobe/редактирование отсутствия/2.png" alt="">
+                 <img class="image-left" src="images/tobe/absence/2.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -164,7 +164,7 @@
         <div class="title">Отсутствие 3</div>
         <div class="column">
             <a href="images/tobe/редактирование отсутствия/3.png">
-                 <img class="image-left" src="images/tobe/редактирование отсутствия/3.png" alt="">
+                 <img class="image-left" src="images/tobe/absence/3.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -176,7 +176,7 @@
         <div class="title">Отсутствие 4</div>
         <div class="column">
             <a href="images/tobe/редактирование отсутствия/4.png">
-                 <img class="image-left" src="images/tobe/редактирование отсутствия/4.png" alt="">
+                 <img class="image-left" src="images/tobe/absence/4.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -188,7 +188,7 @@
         <div class="title">Отсутствие 4</div>
         <div class="column">
             <a href="images/tobe/редактирование отсутствия/4.png">
-                 <img class="image-left" src="images/tobe/редактирование отсутствия/4.png" alt="">
+                 <img class="image-left" src="images/tobe/absence/4.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -200,7 +200,7 @@
         <div class="title">Согласование 1</div>
         <div class="column">
             <a href="images/tobe/согласование/1.png">
-                 <img class="image-left" src="images/tobe/согласование/1.png" alt="">
+                 <img class="image-left" src="images/tobe/agreement/1.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -212,7 +212,7 @@
         <div class="title">Согласование 2</div>
         <div class="column">
             <a href="images/tobe/согласование/2.png">
-                 <img class="image-left" src="images/tobe/согласование/2.png" alt="">
+                 <img class="image-left" src="images/tobe/agreement/2.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -224,7 +224,7 @@
         <div class="title">Согласование 3</div>
         <div class="column">
             <a href="images/tobe/согласование/3.png">
-                 <img class="image-left" src="images/tobe/согласование/3.png" alt="">
+                 <img class="image-left" src="images/tobe/agreement/3.png" alt="">
             </a>
         </div>
         <div class="column">
