--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="title">Редактирование графика 1</div>
         <div class="column">
-            <a href="images/tobe/редактирование виджета/_1.png">
+            <a href="images/tobe/edit/_1.png">
                  <img class="image-left" src="images/tobe/edit/_1.png" alt="">
             </a>
         </div>
@@ -83,7 +83,7 @@
 
         <div class="title">Редактирование графика 2</div>
         <div class="column">
-            <a href="images/tobe/редактирование виджета/_2.png">
+            <a href="images/tobe/edit/_2.png">
                  <img class="image-left" src="images/tobe/edit/_2.png" alt="">
             </a>
         </div>
@@ -95,7 +95,7 @@
 
         <div class="title">Редактирование графика 2_2</div>
         <div class="column">
-            <a href="images/tobe/редактирование виджета/2_2.png">
+            <a href="images/tobe/edit/2_2.png">
                  <img class="image-left" src="images/tobe/edit/2_2.png" alt="">
             </a>
         </div>
@@ -107,7 +107,7 @@
 
         <div class="title">Редактирование графика 3_1</div>
         <div class="column">
-            <a href="images/tobe/редактирование виджета/3_1.png">
+            <a href="images/tobe/edit/3_1.png">
                  <img class="image-left" src="images/tobe/edit/3_1.png" alt="">
             </a>
         </div>
@@ -119,7 +119,7 @@
 
         <div class="title">Редактирование графика 4</div>
         <div class="column">
-            <a href="images/tobe/редактирование виджета/4.png">
+            <a href="images/tobe/edit/4.png">
                  <img class="image-left" src="images/tobe/edit/4.png" alt="">
             </a>
         </div>
@@ -131,7 +131,7 @@
 
         <div class="title">Редактирование графика 5 - todo</div>
         <div class="column">
-            <a href="images/tobe/редактирование виджета/5.png">
+            <a href="images/tobe/edit/5.png">
                  <img class="image-left" src="images/tobe/edit/5.png" alt="">
             </a>
         </div>
@@ -139,8 +139,8 @@
 
         <div class="title">Редактирование графика 5 - статус</div>
         <div class="column">
-            <a href="images/tobe/редактирование виджета/6.png">
-                 <img class="image-left" src="images/tobe/редактирование виджета/6.png" alt="">
+            <a href="images/tobe/edit/6.png">
+                 <img class="image-left" src="images/tobe/edit/6.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -151,7 +151,7 @@
 
         <div class="title">Отсутствие 2</div>
         <div class="column">
-            <a href="images/tobe/редактирование отсутствия/2.png">
+            <a href="images/tobe/agreement/2.png">
                  <img class="image-left" src="images/tobe/absence/2.png" alt="">
             </a>
         </div>
@@ -163,7 +163,7 @@
 
         <div class="title">Отсутствие 3</div>
         <div class="column">
-            <a href="images/tobe/редактирование отсутствия/3.png">
+            <a href="images/tobe/agreement/3.png">
                  <img class="image-left" src="images/tobe/absence/3.png" alt="">
             </a>
         </div>
@@ -175,7 +175,7 @@
 
         <div class="title">Отсутствие 4</div>
         <div class="column">
-            <a href="images/tobe/редактирование отсутствия/4.png">
+            <a href="images/tobe/agreement/4.png">
                  <img class="image-left" src="images/tobe/absence/4.png" alt="">
             </a>
         </div>
@@ -187,7 +187,7 @@
 
         <div class="title">Отсутствие 4</div>
         <div class="column">
-            <a href="images/tobe/редактирование отсутствия/4.png">
+            <a href="images/tobe/agreement/4.png">
                  <img class="image-left" src="images/tobe/absence/4.png" alt="">
             </a>
         </div>
@@ -199,7 +199,7 @@
 
         <div class="title">Согласование 1</div>
         <div class="column">
-            <a href="images/tobe/согласование/1.png">
+            <a href="images/tobe/agreement/1.png">
                  <img class="image-left" src="images/tobe/agreement/1.png" alt="">
             </a>
         </div>
@@ -211,7 +211,7 @@
 
         <div class="title">Согласование 2</div>
         <div class="column">
-            <a href="images/tobe/согласование/2.png">
+            <a href="images/tobe/agreement/2.png">
                  <img class="image-left" src="images/tobe/agreement/2.png" alt="">
             </a>
         </div>
@@ -223,7 +223,7 @@
 
         <div class="title">Согласование 3</div>
         <div class="column">
-            <a href="images/tobe/согласование/3.png">
+            <a href="images/tobe/agreement/3.png">
                  <img class="image-left" src="images/tobe/agreement/3.png" alt="">
             </a>
         </div>
