--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="title">Редактирование графика 1</div>
         <div class="column">
             <a href="images/tobe/edit/_1.png">
-                 <img class="image-left" src="images/tobe/edit/_1.png" alt="">
+                 <img class="image-left" src="images/tobe/edit/1.png" alt="">
             </a>
         </div>
         <div class="column">
@@ -84,7 +84,7 @@
         <div class="title">Редактирование графика 2</div>
         <div class="column">
             <a href="images/tobe/edit/_2.png">
-                 <img class="image-left" src="images/tobe/edit/_2.png" alt="">
+                 <img class="image-left" src="images/tobe/edit/2.png" alt="">
             </a>
         </div>
         <div class="column">
