--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="title">Редактирование графика 1</div>
         <div class="column">
-            <a href="images/tobe/edit/_1.png">
+            <a href="images/tobe/edit/1.png">
                  <img class="image-left" src="images/tobe/edit/1.png" alt="">
             </a>
         </div>
@@ -83,7 +83,7 @@
 
         <div class="title">Редактирование графика 2</div>
         <div class="column">
-            <a href="images/tobe/edit/_2.png">
+            <a href="images/tobe/edit/2.png">
                  <img class="image-left" src="images/tobe/edit/2.png" alt="">
             </a>
         </div>
