--- a/index.html
+++ b/index.html
@@ -175,19 +175,7 @@
 
         <div class="title">Отсутствие 4</div>
         <div class="column">
-            <a href="images/tobe/agreement/4.png">
-                 <img class="image-left" src="images/tobe/absence/4.png" alt="">
-            </a>
-        </div>
-        <div class="column">
-            <a href="images/asis/absence/absence-calendar-4.png">
-                <img class="image-right" src="images/asis/absence/absence-calendar-4.png" alt="">
-            </a>
-        </div>
-
-        <div class="title">Отсутствие 4</div>
-        <div class="column">
-            <a href="images/tobe/agreement/4.png">
+            <a href="images/tobe/absence/4.png">
                  <img class="image-left" src="images/tobe/absence/4.png" alt="">
             </a>
         </div>
